<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginRegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/logo_dport_driver"
                android:layout_width="153.3dp"
                android:layout_height="32.81dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="56dp"
                android:src="@drawable/icon_shipper"
                />

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/your_busine"
                android:layout_width="300dp"
                android:layout_height="110dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:text="@string/your_busines"
                android:src="@drawable/banner"
                android:textAppearance="@style/your_busines"
                android:lineSpacingExtra="0sp"
                android:gravity="top"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/platform_lo"
                android:layout_width="230dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@id/your_busine"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:text="@string/platform_lo"
                android:textAppearance="@style/platform_lo"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.5sp"
                android:gravity="top"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="320dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/platform_lo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lbl_copyright"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/rectangle_2"
                android:layout_gravity="center"
                app:backgroundTint="#36A9E1"
                android:text="@string/mulai_sekar"
                android:textAllCaps="false"
                />

            <TextView
                android:id="@+id/lbl_copyright"
                android:layout_width="154dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:text="@string/sudah_punya"
                android:textAppearance="@style/sudah_punya"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.5sp"
                android:gravity="top"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>