<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity"
    android:background="@color/main_color_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rectangle_3"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_3"
            android:elevation="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginHorizontal="20dp">

                <LinearLayout
                    android:id="@+id/ll_back"
                    android:layout_width="0px"
                    android:layout_height="40dp"
                    android:layout_weight="15"
                    >

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rectangle_1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_back"/>

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="0px"
                    android:layout_height="40dp"
                    android:layout_weight="70"
                    android:text="@string/masuk_akun"
                    android:textAppearance="@style/daftar_akun"
                    android:gravity="center"
                    />

                <ImageView
                    android:layout_width="0px"
                    android:layout_height="40dp"
                    android:layout_weight="15" />
            </LinearLayout>

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:orientation="vertical"
                android:layout_gravity="center|top"
                android:layout_marginVertical="20dp">

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/recipient_email_handphone"
                    android:textAppearance="@style/recipient_s"
                    android:gravity="top"
                    />

                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_4"
                    android:hint="@string/hint_email_handphone"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/recipient_katasandi"
                    android:textAppearance="@style/recipient_s"
                    android:gravity="top"
                    />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_4"
                    android:hint="@string/hint_katasandi"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:inputType="textPassword"/>


                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/lupa_kata_sandi"
                    android:textAppearance="@style/recipient_sss"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.5sp"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="right|top"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/forgot_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_log"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle_2"
                    android:layout_gravity="center"
                    app:backgroundTint="#36A9E1"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login_log"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_belum_punya_akun_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum punya Akun?"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_log"
                    android:textColor="#939393"
                    android:textSize="10sp"
                    android:paddingRight="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daftar Sekarang"
                    app:layout_constraintTop_toBottomOf="@id/btn_login_log"
                    android:textColor="#36A9E1"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/lbl_belum_punya_akun_log"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>