<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_color_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="153.3dp"
                android:layout_height="32.81dp"
                android:src="@drawable/icon_shipper_biru"
                android:layout_marginLeft="20dp"
                />

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_right"
                app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                android:id="@+id/recipient_s"
                android:layout_width="39dp"
                android:layout_height="18dp"
                android:text="Lewati"
                android:textSize="12sp"
                android:textColor="#36A9E1"
                android:fontFamily="@font/readexpro_medium"
                android:textAppearance="@style/recipient_s"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.5sp"
                android:gravity="center_horizontal|top"
                android:layout_marginRight="20dp"
                />

            <LinearLayout
                android:id="@+id/iv_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/right_button"
                android:gravity="center"
                android:layout_marginRight="20dp"
                >

                <ImageView
                    android:layout_width="6.67dp"
                    android:layout_height="6.67dp"
                    android:src="@drawable/right"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="144.41dp"
            android:text="@string/type_usaha"
            android:textAppearance="@style/recipient_s"
            android:gravity="top"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="20dp">

            <Spinner
                android:id="@+id/sp_type"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/type_shipper"/>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kirim"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_2"
            android:layout_gravity="center"
            app:backgroundTint="#36A9E1"
            android:text="@string/kirim"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_kirim_ulang"
            android:layout_width="225dp"
            android:layout_height="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/kirim_ulang"
            android:textAppearance="@style/recipient_s"
            android:gravity="top"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>